--- a/xla/service/gpu/BUILD
+++ b/xla/service/gpu/BUILD
@@ -2702,6 +2702,7 @@ tsl_gpu_library(
         "//xla:shape_util",
         "//xla:util",
         "//xla:xla_data_proto_cc",
+        "//xla/backends/gpu/runtime:nan_check",
         "//xla/service:collective_ops_utils",
         "//xla/service:custom_call_status",
         "//xla/service:custom_call_target_registry",
@@ -2711,6 +2712,8 @@ tsl_gpu_library(
         "//xla/stream_executor:platform_manager",
         "//xla/stream_executor:stream",
         "//xla/stream_executor:stream_finder",
+        "//xla/ffi",
+        "//xla/ffi:ffi_api",
         "@com_google_absl//absl/log",
         "@com_google_absl//absl/log:check",
         "@com_google_absl//absl/status",
